# spam-classification

./: .gitignore  BERT.ipynb  config.py  enviroment.yml  main.py  old.ipynb  pyproject.toml  requirements.txt  scratch.ipynb  text_sentiment_ngrams_tutorial.py
data/: test-data.csv  test.7z  train-data.csv  train-data.tsv  train.7z  valid-data.tsv
notebooks/: old.ipynb
src/: dataloader.py  dataset.py  model.py  old_ds.py  run.py  test.py
