[tool.poetry]
name = "spam-classification"
version = "0.1.0"
description = "Spam Classification on SMS texts"
authors = ["charitarthchugh <37895518+charitarthchugh@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.9"
ipykernel = "^6.9.1"
transformers = "^4.30.0"
tqdm = "^4.63.0"
scikit-learn = "^1.0.2"
pandas = "^1.4.1"
jupyter = "^1.0.0"
torch = "^1.13.1"

[tool.poetry.dev-dependencies]
black = { extras = ["d", "jupyter"], version = "^22.1.0" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
